--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
 		"lint": "eslint . --ext .js,.jsx --fix"
 	},
 	"dependencies": {
+		"axios": "^1.6.6",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
+		"react-router-dom": "^6.21.3",
 		"styled-components": "^6.1.0",
 		"uuid": "9.0.0"
 	},
